<resources>
    <string name="app_name">MATHVEIN</string>
    <string name="loginText">Login</string>
    <string name="passField">Enter Password</string>
    <string name="emailField">Enter Email</string>
    <string name="loginButton">Sign-in</string>
    <string name="createAccountButton">Create Account</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_monitor_mode">MonitorModeActivity</string>
    <string name="title_activity_monitor">MonitorActivity</string>
    <string name="title_activity_mm">MMActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="enter_sleep">Enter Sleep</string>
    <string name="submit">Submit</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_work">Enter Work</string>
    <string name="enter_vitals">Enter Vitals</string>
    <string name="enter_exercise">Enter Exercise</string>
    <string name="type_of_work">Type of Work</string>
    <string name="type_of_exercise">Type of Exercise</string>
    <string name="intensity">Intensity</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="blood_sugar">Enter Blood Sugar</string>
    <string name="systolic">Enter Systolic Pressure</string>
    <string name="diastolic">Enter Diastolic Pressure</string>
    <string name="monitor_mode">Monitor Mode</string>
    <string name="vitals">Vitals</string>
    <string name="events">Events</string>
    <string name="history">History</string>
    <string name="request_help">Request Help</string>
    <string name="appetizer">Appetizer</string>
    <string name="main_dish">Main Dish</string>
    <string name="dessert">Dessert</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="enter_meal">Enter Meal</string>
    <string name="intensity_prompt">Choose 1-5</string>
    <string name="notifications">notifications</string>
    <string name="meal">meal</string>
    <string name="work">Work</string>
    <string name="exercise">Exercise</string>
    <string name="sleep">Sleep</string>
    <string name="events1">EVENTS</string>
    <string name="_0_bpm">0 BPM</string>
    <string name="start">Start</string>
    <string-array name="intensity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_example">example</string>
    <string name="maindish">MainDish</string>
    <string name="drink_">Drink:</string>
    <string name="date">Date:</string>
    <string name="appetizer_">Appetizer:</string>
    <string name="dessert_">Dessert:</string>
    <string name="snack_">Snack:</string>
    <string name="description">description</string>
    <string name="start_">Start:</string>
    <string name="intensity_">Intensity:</string>
    <string name="end_">End:</string>
    <string name="systolic_">Systolic:</string>
    <string name="diastolic_">Diastolic:</string>
    <string name="date_">Date:</string>
    <string name="blood_sugar_">Blood Sugar:</string>

</resources>
