<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkActivity">

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="28dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/intensitySpinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/startTimeField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/workTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_work"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_of_work"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/intensityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/intensityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/intensity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/intensitySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/startTimeField"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/start_time"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/endTimeField"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:textOff="@string/am"
        android:textOn="@string/pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/startTimeField"
        app:layout_constraintTop_toTopOf="@+id/startTimeField"
        app:showText="true" />

    <EditText
        android:id="@+id/endTimeField"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/end_time"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:textOff="@string/am"
        android:textOn="@string/pm"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/endTimeField"
        app:showText="true" />

</android.support.constraint.ConstraintLayout>