<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealActivity">

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/appetizerField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/appetizer"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mainField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mainField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/main_dish"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dessertField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dessertField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/dessert"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/snackField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/snackField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/snack"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/drinkField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/drinkField"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/drink"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/mealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_meal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/appetizerField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>