<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SleepActivity">

    <TextView
        android:id="@+id/sleepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_sleep"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/startTimeField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/startTimeField"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/start_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/endTimeField"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/endTimeField"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="124dp"
        android:ems="10"
        android:hint="@string/end_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="11dp"
        android:textOff="@string/am"
        android:textOn="@string/pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/startTimeField"
        app:layout_constraintTop_toTopOf="@+id/startTimeField"
        app:showText="true" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:textOff="AM"
        android:textOn="PM"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/endTimeField"
        app:showText="true" />

</android.support.constraint.ConstraintLayout>