<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/systolic_vitals_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systolic_"
        app:layout_constraintBottom_toBottomOf="@+id/blood_sugar_vitals_history"
        app:layout_constraintStart_toStartOf="@+id/diastolic_vitals_history"
        app:layout_constraintTop_toTopOf="@+id/blood_sugar_vitals_history" />

    <TextView
        android:id="@+id/diastolic_vitals_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:text="@string/diastolic_"
        app:layout_constraintStart_toEndOf="@+id/date_vitals_history"
        app:layout_constraintTop_toBottomOf="@+id/systolic_vitals_history" />

    <TextView
        android:id="@+id/date_vitals_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_sugar_vitals_history" />

    <TextView
        android:id="@+id/blood_sugar_vitals_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/blood_sugar_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>